# cpp-test-specific-coverage

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh
cmake/: CodeCoverage.cmake  GoogleTest-CMakeLists.txt.in
libs/: CMakeLists.txt
libs/libfoo/: foo.h
libs/libtest/: CMakeLists.txt  cov_listener.cpp  cov_listener.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  cov_listener.cpp  cov_listener.h  listener.h  main.cpp  testfoo.cpp  testfoo.h
